package e1.characterPackage;

public interface CheckPositionPresence {
    boolean checkPositionPresence(int row, int col);
}
